--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
@@ -30,4 +31,7 @@ section{
 }
 .top-banner{
     background-image: url(bgimage/bgimage4.png.png);
+}
+.second-banner{
+    background-image: url(bgimage/bgimage5.png.png);
 }
